<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NekoSMS</string>
    <string name="module_description">A pattern-based text message blocker for Android 4.4+</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ignore">Ignore</string>
    <string name="close">Close</string>
    <string name="restore">Restore</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>

    <!-- Backup -->
    <string name="import_confirm_title">Import backup?</string>
    <string name="import_confirm_message">This will overwrite your existing filter rules!</string>
    <string name="import_success">Import successful</string>
    <string name="import_unknown_version">Backup file version is too new</string>
    <string name="import_invalid_backup">Invalid backup file</string>
    <string name="import_read_failed">Could not read backup file</string>
    <string name="export_success">Export successful</string>
    <string name="export_write_failed">Could not write backup file</string>
    <string name="backup_button_import">Import</string>

    <!-- Filter rules -->
    <string name="blacklist_rules">Blacklist rules</string>
    <string name="blacklist_rules_short">Blacklist</string>
    <string name="whitelist_rules">Whitelist rules</string>
    <string name="whitelist_rules_short">Whitelist</string>
    <string name="blacklist_rules_empty_text">No blacklist rules yet!</string>
    <string name="whitelist_rules_empty_text">No whitelist rules yet!</string>
    <string name="format_filter_info">%1$s %2$s%3$s</string>
    <string name="filter_info_field_sender">Sender</string>
    <string name="filter_info_field_body">Body</string>
    <string name="filter_info_mode_regex">matches regex</string>
    <string name="filter_info_mode_wildcard">matches wildcard</string>
    <string name="filter_info_mode_contains">contains</string>
    <string name="filter_info_mode_prefix">starts with</string>
    <string name="filter_info_mode_suffix">ends with</string>
    <string name="filter_info_mode_equals">equals</string>
    <string name="filter_info_case_sensitive">\u0020(case sensitive)</string>
    <string name="filter_deleted">Filter rule deleted</string>
    <string name="filter_actions">Filter actions</string>
    <string name="enable_xposed_module_title">Enable Xposed module</string>
    <string name="enable_xposed_module_message">
        Android 4.4+ does not allow non-default SMS apps to intercept
        SMS messages or write to the SMS inbox.\n\nTo bypass this restriction,
        please enable the Xposed module, or else this app will not work!
    </string>
    <string name="module_outdated_title">Xposed module updated</string>
    <string name="module_outdated_message">Please reboot your device for changes to take effect.</string>

    <!-- Filter rule editor -->
    <string name="filter_editor">Filter rule editor</string>
    <string name="save_blacklist_rule">Save blacklist rule</string>
    <string name="save_whitelist_rule">Save whitelist rule</string>
    <string name="discard_changes">Discard changes</string>
    <string name="invalid_pattern_title">Invalid pattern</string>
    <string name="format_invalid_pattern_message">The %1$s pattern you have entered is not a legal regular expression!\n\nReason: %2$s</string>
    <string name="invalid_pattern_field_sender">sender</string>
    <string name="invalid_pattern_field_body">body</string>
    <string name="invalid_pattern_reason_unknown">¯\\_(ツ)_/¯</string>

    <!-- Blocked messages -->
    <string name="blocked_messages">Blocked messages</string>
    <string name="blocked_messages_short">Blocked</string>
    <string name="blocked_messages_empty_text">No blocked messages!</string>
    <string name="must_enable_xposed_module">Xposed module must be enabled</string>
    <string name="clear_blocked_messages">Clear blocked messages</string>
    <string name="confirm_clear_messages_title">Delete all messages?</string>
    <string name="confirm_clear_messages_message">Your messages will be gone forever! (A very long time!)</string>
    <string name="cleared_blocked_messages">Deleted all blocked messages</string>
    <string name="message_deleted">Message deleted</string>
    <string name="message_restored">Message restored to inbox</string>
    <string name="message_restore_failed">Message could not be restored</string>
    <string name="load_message_failed">Could not load message</string>
    <string name="message_actions">Message actions</string>
    <string name="format_message_details">
        <![CDATA[
            <b>Sender</b><br>
            %1$s<br><br>

            <b>Time sent</b><br>
            %2$s<br><br>

            <b>Message body</b><br>
            %3$s
        ]]>
    </string>

    <!-- Filter properties -->
    <string name="filter_pattern">Pattern</string>
    <string name="filter_mode">Mode</string>
    <string name="filter_case">Case</string>
    <string name="filter_mode_regex">Regular expression</string>
    <string name="filter_mode_wildcard">Wildcard</string>
    <string name="filter_mode_contains">Contains</string>
    <string name="filter_mode_prefix">Starts with</string>
    <string name="filter_mode_suffix">Ends with</string>
    <string name="filter_mode_equals">Equals</string>
    <string name="filter_field_sender">Sender</string>
    <string name="filter_field_body">Body</string>
    <string name="filter_case_sensitive">Sensitive</string>
    <string name="filter_case_insensitive">Insensitive</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_short">Settings</string>

    <!-- Settings/General -->
    <string name="pref_general">General</string>
    <string name="pref_enable">Enable NekoSMS</string>
    <string name="pref_enable_summary">No reboot required</string>
    <string name="pref_enable_summary_alt">Please enable the Xposed module first!</string>
    <string name="pref_whitelist_contacts">Whitelist contacts</string>
    <string name="pref_whitelist_contacts_summary">Don\'t block messages from contacts</string>
    <string name="pref_verbose_logging">Verbose logging</string>
    <string name="pref_verbose_logging_summary">Write SMS content to logcat</string>

    <!-- Settings/Notifications -->
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_enable">Enable notifications</string>
    <string name="pref_notifications_enable_summary">Show notification when a message is blocked</string>
    <string name="pref_notifications_ringtone">Ringtone</string>
    <string name="pref_notifications_ringtone_silent">None</string>
    <string name="pref_notifications_ringtone_unknown">Unknown</string>
    <string name="pref_notifications_vibrate">Vibration</string>
    <string name="pref_notifications_lights">Lights</string>
    <string name="pref_notifications_priority">Priority</string>
    <string name="pref_notifications_priority_max">Very high</string>
    <string name="pref_notifications_priority_high">High</string>
    <string name="pref_notifications_priority_default">Normal</string>
    <string name="pref_notifications_priority_low">Low</string>
    <string name="pref_notifications_priority_min">Very low</string>
    <string name="pref_notifications_open_settings">Notification settings</string>
    <string name="pref_notifications_open_settings_summary">Click to open notification settings</string>

    <!-- Settings/Backup -->
    <string name="pref_backup">Backup</string>
    <string name="pref_import_backup">Import backup</string>
    <string name="pref_import_backup_summary">Load filter rules from .nsbak file</string>
    <string name="pref_export_backup">Export backup</string>
    <string name="pref_export_backup_summary">Save filter rules to .nsbak file</string>

    <!-- Settings/Cleanup -->
    <string name="pref_cleanup">Auto cleanup</string>
    <string name="pref_cleanup_enable">Enable auto cleanup</string>
    <string name="pref_cleanup_enable_summary">Automatically delete old blocked messages</string>
    <string name="pref_cleanup_days">Cleanup after (days)</string>
    <string name="pref_cleanup_days_summary">Messages older than this will be deleted</string>

    <!-- Settings/About -->
    <string name="pref_about">About</string>
    <string name="pref_about_help">Help</string>
    <string name="pref_about_help_summary">Click to view user guide</string>
    <string name="pref_about_github">GitHub</string>
    <string name="pref_about_github_summary">github.com/apsun/NekoSMS</string>
    <string name="pref_about_version">Version</string>
    <string name="format_pref_about_version_summary">%1$s (%2$d)</string>

    <!-- Notifications -->
    <string name="format_notification_single_sender">%s (blocked)</string>
    <string name="channel_blocked_messages">Blocked messages</string>

    <!-- Debug stuff -->
    <string name="create_test_message">Create test message</string>
</resources>
